2015-11-25  Julien Bect  <julien.bect@centralesupelec.fr>

	Improve display of size+type information

	* arrays/generic/stk_sprintf_sizetype.m: Accept objects.
	* arrays/@cell/stk_sprintf_sizetype.m: Removed.

	Add minimalist display for stk_kreq objects

	* core/@stk_kreq_qr/disp.m: Overload base function.
	* core/@stk_kreq_qr/display.m: Overload base function.

2015-11-22  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_predict.m: Stop accepting row input vectors in the discrete case

	* core/stk_predict.m: Stop accepting row input vectors in the case
	of discrete models (stk_discretecov covariance function).

2015-11-20  Julien Bect  <julien.bect@centralesupelec.fr>

	arrays/@stk_dataframe: Accept char and cell indices

	* arrays/@stk_dataframe/subsasgn.m: Accept char and cell indices.
	* arrays/@stk_dataframe/subsref.m: Accept char and cell indices.
	* arrays/@stk_dataframe/private/process_cell_indices.m: Process
	cell indices (cell arrays of row/column names).
	* arrays/@stk_dataframe/private/process_char_indices.m: Process
	char indices (row/column name).
	* arrays/@stk_dataframe/private/names_errmsg.m: Error messages for
	incorrect cell indices.

2015-11-19  Julien Bect  <julien.bect@centralesupelec.fr>

	Compatibility with Matlab >= R2014b: graphics handles are objects

	* arrays/@stk_dataframe/stk_dataframe.m: Enforce precedence over
	the matlab.graphics.axis.Axes class.
	* arrays/@stk_factorialdesign/stk_factorialdesign.m: Enforce
	precedence over the matlab.graphics.axis.Axes class.
	* arrays/@stk_dataframe/plot.m: Do not assume that graphics
	handles are doubles.
	* misc/plot/stk_plot_shadedci.m: Do not assume that graphics
	handles are doubles.

	stk_optim_fminsearch.m: Do not try to detect fminsearch

	* misc/optim/@stk_optim_fminsearch/stk_optim_fminsearch.m: Do not
	try to detect at this point whether fminsearch is available.

2015-11-15  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_init.m: Remove STK's root from the path if needed
